--- a/SetupWindowController.xib
+++ b/SetupWindowController.xib
@@ -16,6 +16,7 @@
                 <outlet property="passwordTabViewItem" destination="z7P-TO-mIl" id="lfd-iv-zau"/>
                 <outlet property="setGestureImage" destination="gCS-ar-kdn" id="0x3-V1-GEf"/>
                 <outlet property="settingsWindow" destination="F0z-JX-Cv5" id="aqy-ga-1zD"/>
+                <outlet property="tabView" destination="KW5-sd-8qx" id="nPi-Ul-Lzm"/>
                 <outlet property="thumbsUpImageView" destination="H8S-eW-fWK" id="r4y-1s-YRp"/>
                 <outlet property="timeTextField" destination="yxQ-O9-Qtf" id="Ydq-7x-W3j"/>
                 <outlet property="updatePasswordButton" destination="q5E-7m-xha" id="JKE-jg-cKQ"/>
@@ -42,7 +43,7 @@
                                     <subviews>
                                         <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gCS-ar-kdn">
                                             <rect key="frame" x="166" y="-131" width="72" height="61"/>
-                                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="1C55E8AC-9278-49FA-B530-7EC54A58745A" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="nLu-GO-71N">
+                                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="250D818E-1183-4AE0-AA32-0A796B0C66C8" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="nLu-GO-71N">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                 <font key="font" metaFont="system"/>
                                             </buttonCell>
@@ -54,19 +55,22 @@
                                 </view>
                             </tabViewItem>
                             <tabViewItem label="Set password" identifier="2" id="z7P-TO-mIl">
-                                <view key="view" id="2LC-B6-15A">
+                                <view key="view" ambiguous="YES" id="2LC-B6-15A">
                                     <rect key="frame" x="10" y="33" width="404" height="216"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <secureTextField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WUW-lv-gGt">
                                             <rect key="frame" x="17" y="136" width="236" height="27"/>
-                                            <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="left" placeholderString="Your password" drawsBackground="YES" usesSingleLineMode="YES" id="L0y-pu-M8a">
+                                            <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="left" placeholderString="Your login password" drawsBackground="YES" usesSingleLineMode="YES" id="L0y-pu-M8a">
                                                 <font key="font" metaFont="system" size="18"/>
                                                 <color key="textColor" white="0.0" alpha="0.75" colorSpace="deviceWhite"/>
                                                 <color key="backgroundColor" red="0.5" green="0.5" blue="0.5" alpha="0.10236591312056738" colorSpace="calibratedRGB"/>
                                                 <allowedInputSourceLocales>
                                                     <string>NSAllRomanInputSourcesLocaleIdentifier</string>
                                                 </allowedInputSourceLocales>
+                                                <connections>
+                                                    <action selector="updatePassword:" target="-2" id="CO4-2Q-1g7"/>
+                                                </connections>
                                             </secureTextFieldCell>
                                         </secureTextField>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gge-HB-iEa">
@@ -90,7 +94,7 @@
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rBe-qo-kb3">
                                             <rect key="frame" x="15" y="85" width="374" height="43"/>
                                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" id="ntq-C4-COe">
-                                                <font key="font" metaFont="smallSystem"/>
+                                                <font key="font" metaFont="system"/>
                                                 <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
@@ -106,7 +110,7 @@
                                 </view>
                             </tabViewItem>
                             <tabViewItem label="Advanced settings" identifier="" id="Wfg-wj-2I2">
-                                <view key="view" ambiguous="YES" id="Uvh-6s-t8y">
+                                <view key="view" id="Uvh-6s-t8y">
                                     <rect key="frame" x="10" y="33" width="404" height="216"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
@@ -135,7 +139,7 @@
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aPH-n8-gpS">
                                             <rect key="frame" x="130" y="104" width="259" height="54"/>
-                                            <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="The bigger is it, the more time you have between two consecutive gestures of the same sequence." id="Jd5-Uh-rhd">
+                                            <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="The bigger it is, the more time you have between two consecutive gestures of the same sequence." id="Jd5-Uh-rhd">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" red="0.38506217279999999" green="0.38506217279999999" blue="0.38506217279999999" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -159,7 +163,7 @@
         </window>
     </objects>
     <resources>
-        <image name="1C55E8AC-9278-49FA-B530-7EC54A58745A" width="96" height="96">
+        <image name="250D818E-1183-4AE0-AA32-0A796B0C66C8" width="96" height="96">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOjtYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISgrLjQ3VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
