--- a/AboutWindowController.xib
+++ b/AboutWindowController.xib
@@ -44,7 +44,7 @@
                             <font key="font" metaFont="system"/>
                             <string key="title">Frenk v. 1.0.0
 
-Lei ha clacsonato
+Lei ha clacsonato1
   voglio il vicesindaco, Necchi
   voglio il numero, Necchi
   mi porga il numero bitumando il vicesindaco, dico, bitumando
