--- a/SetupWindowController.xib
+++ b/SetupWindowController.xib
@@ -8,6 +8,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="SetupWindowController" customModule="Frenk" customModuleProvider="target">
             <connections>
                 <outlet property="confirmGestureWithPasswordLabel" destination="FA9-Ia-R3o" id="Sym-cc-S8d"/>
+                <outlet property="continueAniwayButton" destination="usO-2N-4tC" id="k37-Wj-fSA"/>
                 <outlet property="countGesturesButton" destination="wZb-uB-FEB" id="lJA-RD-dfY"/>
                 <outlet property="countGesturesLabel" destination="Jcq-MG-tX9" id="sQ9-4o-sFy"/>
                 <outlet property="gestureInstructionsLabel" destination="FYt-ye-M8q" id="A8n-WG-DDn"/>
@@ -17,10 +18,12 @@
                 <outlet property="launchAtLoginWarning" destination="VFo-XE-4Ft" id="JoH-lp-uLj"/>
                 <outlet property="logoImageView" destination="W3N-bl-O9F" id="FHq-Lk-SA8"/>
                 <outlet property="mouseImageView" destination="mMm-f3-H3j" id="jHZ-yr-IOu"/>
+                <outlet property="orLabel" destination="cew-Hp-OKK" id="P6L-rF-M37"/>
                 <outlet property="passwordAlertTextField" destination="8Li-kF-7OY" id="Om2-x9-1xJ"/>
                 <outlet property="passwordField" destination="WUW-lv-gGt" id="mqd-Nw-vbt"/>
                 <outlet property="passwordOkField" destination="rBe-qo-kb3" id="ym0-h8-Goo"/>
                 <outlet property="passwordTabViewItem" destination="z7P-TO-mIl" id="lfd-iv-zau"/>
+                <outlet property="retryButton" destination="xm4-vM-ELP" id="V5m-sA-Kca"/>
                 <outlet property="scrollImageView" destination="QL1-Me-z25" id="aJT-1j-8HA"/>
                 <outlet property="settingsWindow" destination="F0z-JX-Cv5" id="aqy-ga-1zD"/>
                 <outlet property="tabView" destination="KW5-sd-8qx" id="nPi-Ul-Lzm"/>
@@ -45,12 +48,12 @@
                         <font key="font" metaFont="system"/>
                         <tabViewItems>
                             <tabViewItem label="Set sequence" identifier="1" id="NvK-Nz-3aE">
-                                <view key="view" id="dGM-BU-xlt">
+                                <view key="view" ambiguous="YES" id="dGM-BU-xlt">
                                     <rect key="frame" x="10" y="33" width="404" height="213"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FYt-ye-M8q">
-                                            <rect key="frame" x="15" y="159" width="374" height="54"/>
+                                            <rect key="frame" x="15" y="160" width="374" height="49"/>
                                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Move the cursor inside this box and start recording your gesture sequence with two fingers on the trakpad." id="7ql-cI-Tpw">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" red="0.38506217279999999" green="0.38506217279999999" blue="0.38506217279999999" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
@@ -80,11 +83,39 @@
                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
                                         </textField>
+                                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="usO-2N-4tC">
+                                            <rect key="frame" x="137" y="71" width="130" height="32"/>
+                                            <buttonCell key="cell" type="bevel" title="Continue anyway" bezelStyle="regularSquare" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="gxM-CW-X0Z">
+                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                <font key="font" metaFont="system"/>
+                                            </buttonCell>
+                                            <connections>
+                                                <action selector="continueAnywayPressed:" target="-2" id="dtS-Kp-NSS"/>
+                                            </connections>
+                                        </button>
+                                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xm4-vM-ELP">
+                                            <rect key="frame" x="137" y="126" width="130" height="32"/>
+                                            <buttonCell key="cell" type="bevel" title="Retry" bezelStyle="regularSquare" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Hy1-V7-92c">
+                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                <font key="font" metaFont="system"/>
+                                            </buttonCell>
+                                            <connections>
+                                                <action selector="retryPressed:" target="-2" id="2f0-ti-fBz"/>
+                                            </connections>
+                                        </button>
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cew-Hp-OKK">
+                                            <rect key="frame" x="137" y="107" width="130" height="14"/>
+                                            <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="or" id="EVj-yZ-HSa">
+                                                <font key="font" metaFont="smallSystem"/>
+                                                <color key="textColor" red="0.38506217279999999" green="0.38506217279999999" blue="0.38506217279999999" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
                                     </subviews>
                                 </view>
                             </tabViewItem>
                             <tabViewItem label="Set password" identifier="2" id="z7P-TO-mIl">
-                                <view key="view" ambiguous="YES" id="2LC-B6-15A">
+                                <view key="view" id="2LC-B6-15A">
                                     <rect key="frame" x="10" y="33" width="404" height="213"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
